# punica

./: .astyle.conf  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
doc/: MANUAL_BUILD.md  PLUGIN_API.md  PUBLIC_API.md  PUNICA_API.md
include/: core.hpp
include/plugin_manager/: plugin.hpp  plugin_api.hpp  plugin_manager.hpp  plugin_manager_core.hpp
include/plugin_manager/lwm2m_framework/: lwm2m_framework.hpp
include/plugin_manager/rest_framework/: request.h  request.hpp  response.h  response.hpp  rest_framework.h  rest_framework.hpp
include/punica/: core.hpp  lwm2m_core.hpp  version.h.in
include/punica/lwm2m/: core.hpp
include/punica/plugin/: plugin.hpp  plugin_api.hpp
include/punica/rest/: callback_handler.hpp  core.h  core.hpp  http_codes.h  request.h  request.hpp  response.h  response.hpp  rest_core.h  rest_core.hpp
include/rest/: callback_handler.hpp  response.hpp  rest_core.h  rest_core.hpp  rest_framework.h  rest_framework.hpp
script/: .gitignore  .utils  bootstrap  cibuild  format_style.sh  server  setup  test  update
src/: CMakeLists.txt  connection-callback.c  connection-general.c  connection-general.h  connection-secure.c  connection-secure.h  connection.c  connection.h  database.c  database.h  devices_database.c  devices_database.h  dtls_connection_api.c  dtls_connection_api.h  http_codes.h  linked_list.c  linked_list.h  logging.c  logging.h  punica.c  punica.cmake  punica.h  punica_core.c  punica_core.h  punica_main.c  rest-authentication.c  rest-core-types.c  rest-core-types.h  rest-core.c  rest-devices.c  rest-endpoints.c  rest-list.c  rest-list.h  rest-notifications.c  rest-resources.c  rest-subscriptions.c  rest-utils.c  rest-utils.h  rest.h  rest_authentication.c  (+27 more)
src/plugin_manager/: basic_core.cpp  basic_core.h  basic_core.hpp  basic_plugin_manager.cpp  basic_plugin_manager.h  basic_plugin_manager.hpp  basic_plugin_manager_core.cpp  basic_plugin_manager_core.h  basic_plugin_manager_core.hpp  basic_plugin_wrapper.cpp  basic_plugin_wrapper.hpp  plugin_manager.cmake  plugin_manager.hpp
src/plugin_manager/include/: basic_plugin_manager.h  basic_plugin_manager.hpp  basic_plugin_manager_core.h  basic_plugin_manager_core.hpp  plugin.hpp  plugin_api.hpp  plugin_manager.hpp  plugin_manager_core.hpp
src/plugin_manager/lwm2m_framework/: basic_lwm2m_core.cpp  basic_lwm2m_core.h  basic_lwm2m_core.hpp  basic_lwm2m_framework.cpp  basic_lwm2m_framework.h  basic_lwm2m_framework.hpp  lwm2m_framework.cmake
src/plugin_manager/lwm2m_framework/include/: basic_lwm2m_framework.h  basic_lwm2m_framework.hpp  lwm2m_framework.hpp
src/plugin_manager/lwm2m_framework/src/: basic_lwm2m_framework.cpp
src/plugin_manager/rest_framework/: rest_framework.cmake  ulfius_callback_handler.cpp  ulfius_callback_handler.hpp  ulfius_request.cpp  ulfius_request.h  ulfius_request.hpp  ulfius_response.cpp  ulfius_response.h  ulfius_response.hpp  ulfius_rest_core.cpp  ulfius_rest_core.h  ulfius_rest_core.hpp  ulfius_rest_framework.cpp  ulfius_rest_framework.h  ulfius_rest_framework.hpp
src/plugin_manager/rest_framework/include/: callback_handler.hpp  request.h  request.hpp  response.h  response.hpp  rest_framework.h  rest_framework.hpp  ulfius_request.h  ulfius_request.hpp  ulfius_response.h  ulfius_response.hpp  ulfius_rest_framework.h  ulfius_rest_framework.hpp
src/plugin_manager/rest_framework/src/: ulfius_request.cpp  ulfius_response.cpp  ulfius_rest_framework.cpp
src/plugin_manager/src/: basic_plugin_manager.cpp  basic_plugin_manager_core.cpp
src/rest/: rest-authentication.c  rest-authentication.h  rest-core-types.c  rest-core-types.h  rest-core.c  rest-devices.c  rest-endpoints.c  rest-notifications.c  rest-resources.c  rest-subscriptions.c  rest-utils.c  rest-utils.h  rest.cmake  rest_authentication.c  rest_callbacks.h  rest_core.c  rest_core.h  rest_core_types.c  rest_core_types.h  rest_devices.c  rest_endpoints.c  rest_notifications.c  rest_resources.c  rest_subscriptions.c  rest_utils.c  rest_utils.h
src/utils/: base64.c  base64.h  utils.cmake
tests/rest/: callback.secure.spec.js  certificate_template.cfg  client-if.js  client-secure-if.js  database.json  devices.spec.js  endpoints-secure.spec.js  endpoints.spec.js  notifications.spec.js  package-lock.json  package.json  plugins.cfg  plugins.spec.js  resources.spec.js  secure.cfg  security.spec.js  server-if.js  server-with-plugins.js  subscriptions.spec.js  version.spec.js
tests/rest/plugins/plugin-incompatible-version/: CMakeLists.txt
tests/rest/plugins/plugin-incompatible-version/src/: test_plugin.cpp  test_plugin.hpp
tests/rest/plugins/plugin-without-api/: CMakeLists.txt
tests/rest/plugins/plugin-without-api/include/: plugin_without_api.hpp
tests/rest/plugins/plugin-without-api/src/: plugin_without_api.cpp  plugin_without_api.hpp
tests/rest/plugins/plugin-without-create/: CMakeLists.txt
tests/rest/plugins/plugin-without-create/include/: plugin_without_create.hpp
tests/rest/plugins/plugin-without-create/src/: plugin_without_create.cpp  plugin_without_create.hpp
tests/rest/plugins/plugin-without-destroy/: CMakeLists.txt
tests/rest/plugins/plugin-without-destroy/include/: plugin_without_destroy.hpp
tests/rest/plugins/plugin-without-destroy/src/: plugin_without_destroy.cpp  plugin_without_destroy.hpp
tests/rest/plugins/test-plugin/: CMakeLists.txt
tests/rest/plugins/test-plugin-with-counters/: CMakeLists.txt
tests/rest/plugins/test-plugin-with-counters/src/: counter.cpp  counter.hpp  test_plugin_with_counters.cpp  test_plugin_with_counters.hpp
tests/rest/plugins/test-plugin/include/: test_plugin.hpp
tests/rest/plugins/test-plugin/src/: test_plugin.cpp  test_plugin.hpp
